handlers replaced with net/http for go chi router
